data/derived/comb/progs/unify/prog8679.ml.out
Characters 33-34:
  let rec wwhile (f,b) = if f then f(f,b) else b;;
                                   ^
Error: This expression has type bool
       This is not a function; it cannot be applied.
